# torrentdep

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jni/: CMakeLists.txt  torrent_handler.cpp  torrent_handler.h
android/src/main/jni/build-arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
android/src/main/jni/build-armeabi-v7a/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
android/src/main/jni/build-x86/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
android/src/main/jni/build-x86_64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
android/src/main/kotlin/com/example/dart_torrent_handler/: DartTorrentHandlerPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: dart_torrent_handler.podspec
ios/Classes/: DartTorrentHandlerPlugin.swift
lib/: dart_torrent_handler.dart  dart_torrent_handler_method_channel.dart  dart_torrent_handler_platform_interface.dart
test/: dart_torrent_handler_method_channel_test.dart  dart_torrent_handler_test.dart
(+2 files in other folders)
